--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
     font-size: 18px;
     font-family: 'Courier New', Courier, monospace;
     height: 100vh;
+    background-color: #eed9c4;
 }
 .container {
     height: 100%;
@@ -84,18 +85,45 @@ footer {
 }
 .contentHome {
     margin: 10px;
-    padding: 10px;
     background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url("./backgroundImg.jpg");
     background-size: cover;
     color: white;
     text-align: center;
 }
 .contentMenu {
-
+    text-align: center;
+    background-color: #d9b99b;
+    border-radius: 20px;
+    margin: 10px;
+    margin-left: 80px;
+    margin-right: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pizzaMenuGrid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 500px));
+    gap: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.drinkMenuGrid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 300px));
+    gap: 20px;
+}
+.menuItem {
+    padding: 10px;
+    background-color: #eed9c4;
+    border-radius: 4px;
+    
 }
 .contentContact {
 
 }
 .contentContact, .contentMenu, .contentHome {
     height: 100%;
+
+    padding: 10px;
 }
